-security#GHSA-wh9c-v56x-v77c: It is possible to create XSS with an nafarious External Link
-security#GHSA-gxq4-mv8h-6qj4: Fix a possible user directed RCE when installing Cacti
-issue#5754: Installer replication loop for. Plugin realms
-issue#5759: Remote poller attempts to sync with other pollers during install
-issue#5768: Cacti does not properly escape Data Query indexes that include a space
-issue#5772: Login log message unification - add client IP address
-issue#5773: Update rrd.php missing variable $okpos
-issue#5777: The Export .CSV only includes the 1st line of Notes
-issue#5780: Undefined array key "default" in file html_form.php
-issue#5782: Function file_get_contents in file link.php
-issue#5783: Cacti improperly handles connection closing leading to issues with third party connections
-issue#5785: auth_changepassword.php triggers NS_ERROR_REDIRECT_LOOP if server's default IP address is not public
-issue#5790: Cactid - Cron out of sync with poller Message
-issue#5791: Unable to filter users by user group, or the last time they logged into Cacti
-issue#5792: Unable to add Graphs to a Report from Cacti List View
-issue#5797: Add additional Repair Database Checks to address various Cacti database corruptions
-issue#5802: Cacti should not convert non-base tables as they may have an focused characters set and engine
-issue#5806: Issues with Cacti posix_kill wrapper in Windows
-feature#5784: Provide a means by which a user can track Cacti connections and disconnects from the php error_log
-feature#5796: Due to Conflicting Interpretations of TCP Ping, Introduce new Ping Method
-feature: Update jQueryUI to 1.14.0
-feature: Improve the performance of the repopulation of the poller cache

1.2.27
-security#GHSA-37x7-mfjv-mm7m: Authentication Bypass when using using older password hashes
-security#GHSA-7cmj-g5qc-pj88: RCE vulnerability when importing packages
-security#GHSA-cx8g-hvq8-p2rv: RCE vulnerability when plugins include files